--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -84,7 +84,7 @@ jobs:
     - name: Creating Dump
       run: |
         cd /home/Auto-Dumper/DumprX
-        sudo bash dumper.sh "${{ env.FUR }}"
+        bash dumper.sh "${{ env.FUR }}"
         sudo chmod -R 777 out
 
     - name: Setting up Git
