--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -75,7 +75,6 @@ jobs:
         cd Auto-Dumper
         git clone https://github.com/DumprX/DumprX
         cd DumprX
-        chmod 777 *.sh
         bash setup.sh
         pip3 install aospdtgen
         pip3 install twrpdtgen
@@ -84,7 +83,7 @@ jobs:
       run: |
         cd /home/Auto-Dumper/DumprX
         bash dumper.sh "${{ env.FUR }}"
-        chmod -R 777 out
+        sudo chmod -R 777 out
 
     - name: Setting up Git
       run: |
@@ -98,7 +97,7 @@ jobs:
     - name: Uploading ROM Dump
       run: |
         cd /home/Auto-Dumper/DumprX/out
-        chmod -R 777 *
+        sudo chmod -R 777 *
         if [ -d system ]; then
            echo " "
         else
@@ -225,9 +224,9 @@ jobs:
         echo "Done cloning extract-utils."
         git clone --depth=1  https://github.com/LineageOS/android_prebuilts_extract-tools -b lineage-20.0 ./android/prebuilts/extract-tools
         echo "Done cloning extract-tools."
-        chmod 777 android/device/"$brand"/"$codename"/setup-makefiles.sh
+        sudo chmod 777 android/device/"$brand"/"$codename"/setup-makefiles.sh
         cd android/device/"$brand"/"$codename"
-        chmod 777 extract-files.sh
+        sudo chmod 777 extract-files.sh
         bash extract-files.sh /home/Auto-Dumper/vnd_project/dump/
         echo "Done extracting and making files."
         echo "Pushing as repository now."
@@ -240,7 +239,7 @@ jobs:
         codename=$(cat codename.txt)
         brand=$(cat brand.txt)
         cd vnd_project/android/vendor/"$brand"/"$codename"
-        chmod -R 777 *
+        sudo chmod -R 777 *
         dat=$(date +%Y%m%d)
         git init
         git branch -M vendor-"$codename"-"$dat"
