--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Clone and Setup DumprX
       run: |
         cd /home
-        sudo mkdir mode=777 Auto-Dumper
+        mkdir -p Auto-Dumper
         cd Auto-Dumper
         git clone https://github.com/DumprX/DumprX
         cd DumprX
@@ -103,7 +103,7 @@ jobs:
         else
            echo "Failed!";
            cd /home/Auto-Dumper
-           rm -rf DumprX
+           sudo rm -rf DumprX
            exit 1;
         fi;
         los_dir="lineage-device-tree"
@@ -169,7 +169,7 @@ jobs:
            echo "$fingerprint" >> fingerprint.txt
            cd /home/Auto-Dumper/DumprX/out
         fi
-        rm -rf .git
+        sudo rm -rf .git
         echo "Compressing images..."
         max_size=48000000
         images=("recovery.img" "boot.img" "vendor_boot.img" "init_boot.img" "dtbo.img" "dtb.img")
@@ -183,13 +183,11 @@ jobs:
         done
         find /home/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
         dat=$(date +%Y%m%d)
-        description="Dump for $brand $codename"
-        description=$(echo "$description" | tr -d '\n\r\t')
         git init
         git branch -M dump-"$codename"-"$dat"
-        git add .
+        git add . -f
         git commit -s -m "Dump for $brand $codename"
-        gh repo create dump_"$brand"_"$codename" --public --description="$description" --source=. --remote=origin --push
+        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
         cd /home/Auto-Dumper
         mkdir vnd_project
         mkdir vnd_project/dump
@@ -243,13 +241,13 @@ jobs:
         dat=$(date +%Y%m%d)
         git init
         git branch -M vendor-"$codename"-"$dat"
-        git add .
+        git add . -f
         git commit -s -m "$codename : initial vendor tree"
         gh repo create android_vendor_"$brand"_"$codename" --public --description="Vendor tree for $codename" --source=. --remote=origin --push
         echo "Succesfull"
         cd /home/Auto-Dumper
-        rm -rf DumprX
-        rm -rf vnd_project
+        sudo rm -rf DumprX
+        sudo rm -rf vnd_project
 
     - name: Uploading LineageOS Device Tree
       if: |
@@ -262,7 +260,7 @@ jobs:
         dat=$(date +%Y%m%d)
         git init
         git branch -M lineage-"$codename"-"$dat"
-        git add .
+        git add . -f
         git commit -s -m "$codename : LineageOS compatible device tree"
         gh repo create lineage_device_"$brand"_"$codename" --public --description="LineageOS compatible tree for $codename " --source=. --remote=origin --push
       continue-on-error: true
@@ -280,7 +278,7 @@ jobs:
         [ ! -f BoardConfig.mk ] && cd "$brand"/"$codename"
         git init
         git branch -M twrp-"$version"-"$dat"
-        git add .
+        git add . -f
         git commit -s -m "$codename : TWRP compatible device tree"
         gh repo create twrp_device_"$brand"_"$codename" --public --description="TWRP compatible tree for $codename " --source=. --remote=origin --push
       continue-on-error: true
