--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -70,8 +70,8 @@ jobs:
 
     - name: Clone and Setup DumprX
       run: |
-        cd /home
-        sudo mkdir -p Auto-Dumper
+        cd ${GITHUB_WORKSPACE}
+        mkdir -p Auto-Dumper
         cd Auto-Dumper
         git clone https://github.com/DumprX/DumprX
         cd DumprX
@@ -81,9 +81,9 @@ jobs:
 
     - name: Creating Dump
       run: |
-        cd /home/Auto-Dumper/DumprX
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX
         bash dumper.sh "${{ env.FUR }}"
-        sudo chmod -R 777 out
+        chmod -R 777 out
 
     - name: Setting up Git
       run: |
@@ -96,25 +96,25 @@ jobs:
 
     - name: Uploading ROM Dump
       run: |
-        cd /home/Auto-Dumper/DumprX/out
-        sudo chmod -R 777 *
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
+        chmod -R 777 *
         if [ -d system ]; then
            echo " "
         else
            echo "Failed!";
-           cd /home/Auto-Dumper
-           sudo rm -rf DumprX
+           cd ${GITHUB_WORKSPACE}/Auto-Dumper
+           rm -rf DumprX
            exit 1;
         fi;
         los_dir="lineage-device-tree"
         if [ -d "$los_dir" ]; then
-           cp -r $los_dir /home/Auto-Dumper
+           cp -r $los_dir ${GITHUB_WORKSPACE}/Auto-Dumper
         else
            echo "Lineage device tree not found!";
         fi;
         tw_dir="twrp-device-tree"
         if [ -d "$tw_dir" ]; then
-           cp -r $tw_dir /home/Auto-Dumper
+           cp -r $tw_dir ${GITHUB_WORKSPACE}/Auto-Dumper
         else
            echo "TWRP device tree not found!";
            unset tw_dir
@@ -148,65 +148,65 @@ jobs:
         brand=$new_brand
         new_codename=$(echo "$codename")
         codename=$(echo "$new_codename" | tr -d '[:space:]')
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         echo "$codename" >> codename.txt
         echo "$brand" >> brand.txt
-        cd /home/Auto-Dumper/DumprX/out
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
         cd system
         if [ -d system ]; then
            cd system
            version=$(grep "ro.build.version.release_or_codename=" build.prop | cut -d'=' -f2)
            fingerprint=$(grep "ro.system.build.fingerprint=" build.prop | cut -d'=' -f2)
-           cd /home/Auto-Dumper
+           cd ${GITHUB_WORKSPACE}/Auto-Dumper
            echo "$version" >> version.txt
            echo "$fingerprint" >> fingerprint.txt
-           cd /home/Auto-Dumper/DumprX/out
+           cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
         else
            version=$(grep "ro.build.version.release_or_codename=" build.prop | cut -d'=' -f2)
            fingerprint=$(grep "ro.system.build.fingerprint=" build.prop | cut -d'=' -f2)
-           cd /home/Auto-Dumper
+           cd ${GITHUB_WORKSPACE}/Auto-Dumper
            echo "$version" >> version.txt
            echo "$fingerprint" >> fingerprint.txt
-           cd /home/Auto-Dumper/DumprX/out
+           cd ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out
         fi
-        sudo rm -rf .git
+        rm -rf .git
         echo "Compressing images..."
         max_size=48000000
         images=("recovery.img" "boot.img" "vendor_boot.img" "init_boot.img" "dtbo.img" "dtb.img")
         for pf in ${images[@]}; do
            if [ -f $pf ]; then
               if [[ $(stat -c %s $pf) -gt $max_size ]]; then
-                 cp $pf /home/Auto-Dumper
+                 cp $pf ${GITHUB_WORKSPACE}/Auto-Dumper
                  gzip -f $pf
               fi
            fi
         done
-        find /home/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
+        find ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
         dat=$(date +%Y%m%d)
         git init
         git branch -M dump-"$codename"-"$dat"
         git add . -f
         git commit -s -m "Dump for $brand $codename"
         gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         mkdir vnd_project
         mkdir vnd_project/dump
         mkdir -p vnd_project/android/device/"$brand"/"$codename"
         cd DumprX/out
         if [ -d "$los_dir" ]; then
-           mv /home/Auto-Dumper/DumprX/out/lineage-device-tree/* /home/Auto-Dumper/vnd_project/android/device/"$brand"/"$codename"
+           mv ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out/lineage-device-tree/* ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/android/device/"$brand"/"$codename"
            rm -rf $los_dir
         else
            echo "LINEAGEOS DEVİCE TREE NOT FOUND!"
            echo "IF REQUESTED, VENDOR TREE WILL NOT BE CREATED"
         fi
-        mv /home/Auto-Dumper/DumprX/out/* /home/Auto-Dumper/vnd_project/dump
+        mv ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out/* ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/dump
 
     - name: Create vendor tree
       if: |
         env.GVT == 'true'
       run: |
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         codename=$(cat codename.txt)
         brand=$(cat brand.txt)
         cd vnd_project
@@ -222,10 +222,10 @@ jobs:
         echo "Done cloning extract-utils."
         git clone --depth=1  https://github.com/LineageOS/android_prebuilts_extract-tools -b lineage-20.0 ./android/prebuilts/extract-tools
         echo "Done cloning extract-tools."
-        sudo chmod 777 android/device/"$brand"/"$codename"/setup-makefiles.sh
+        chmod 777 android/device/"$brand"/"$codename"/setup-makefiles.sh
         cd android/device/"$brand"/"$codename"
-        sudo chmod 777 extract-files.sh
-        bash extract-files.sh /home/Auto-Dumper/vnd_project/dump/
+        chmod 777 extract-files.sh
+        bash extract-files.sh ${GITHUB_WORKSPACE}/Auto-Dumper/vnd_project/dump/
         echo "Done extracting and making files."
         echo "Pushing as repository now."
 
@@ -233,11 +233,11 @@ jobs:
       if: |
         env.GVT == 'true'
       run: |
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         codename=$(cat codename.txt)
         brand=$(cat brand.txt)
         cd vnd_project/android/vendor/"$brand"/"$codename"
-        sudo chmod -R 777 *
+        chmod -R 777 *
         dat=$(date +%Y%m%d)
         git init
         git branch -M vendor-"$codename"-"$dat"
@@ -245,15 +245,15 @@ jobs:
         git commit -s -m "$codename : initial vendor tree"
         gh repo create android_vendor_"$brand"_"$codename" --public --description="Vendor tree for $codename" --source=. --remote=origin --push
         echo "Succesfull"
-        cd /home/Auto-Dumper
-        sudo rm -rf DumprX
-        sudo rm -rf vnd_project
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
+        rm -rf DumprX
+        rm -rf vnd_project
 
     - name: Uploading LineageOS Device Tree
       if: |
         env.LOT == 'true'
       run: |
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         codename=$(cat codename.txt)
         brand=$(cat brand.txt)
         cd lineage-device-tree
@@ -269,7 +269,7 @@ jobs:
       if: |
         env.TWT == 'true'
       run: |
-        cd /home/Auto-Dumper
+        cd ${GITHUB_WORKSPACE}/Auto-Dumper
         codename=$(cat codename.txt)
         brand=$(cat brand.txt)
         version=$(cat version.txt)
@@ -288,11 +288,11 @@ jobs:
       with: 
         name: Prewiew images
         path: |
-          /home/Auto-Dumper/boot.img
-          /home/Auto-Dumper/recovery.img
-          /home/Auto-Dumper/vendor_boot.img
-          /home/Auto-Dumper/init_boot.img
-          /home/Auto-Dumper/dtbo.img
-          /home/Auto-Dumper/dtb.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/boot.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/recovery.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/vendor_boot.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/init_boot.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/dtbo.img
+          ${GITHUB_WORKSPACE}/Auto-Dumper/dtb.img
         if-no-files-found: ignore
       continue-on-error: true
