--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -91,7 +91,7 @@ jobs:
         git config --global user.email "${{ env.UEM }}"
         git config --global http.postBuffer 2048M
         git config --global http.maxRequestBuffer 1024M
-        git config --global core.compression 9
+        git config --global core.compression 0
         unset GITHUB_TOKEN
         gh auth login --with-token <<< "${{ secrets.GTOKEN }}"
 
@@ -188,6 +188,9 @@ jobs:
         git branch -M dump-"$codename"-"$dat"
         git add . -f
         git commit -s -m "Dump for $brand $codename"
+        export GIT_TRACE_PACKET=1
+        export GIT_TRACE=1
+        export GIT_CURL_VERBOSE=1
         gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
         cd ${GITHUB_WORKSPACE}/Auto-Dumper
         mkdir vnd_project
@@ -244,6 +247,9 @@ jobs:
         git branch -M vendor-"$codename"-"$dat"
         git add . -f
         git commit -s -m "$codename : initial vendor tree"
+        export GIT_TRACE_PACKET=1
+        export GIT_TRACE=1
+        export GIT_CURL_VERBOSE=1
         gh repo create android_vendor_"$brand"_"$codename" --public --description="Vendor tree for $codename" --source=. --remote=origin --push
         echo "Succesfull"
         cd ${GITHUB_WORKSPACE}/Auto-Dumper
@@ -263,6 +269,9 @@ jobs:
         git branch -M lineage-"$codename"-"$dat"
         git add . -f
         git commit -s -m "$codename : LineageOS compatible device tree"
+        export GIT_TRACE_PACKET=1
+        export GIT_TRACE=1
+        export GIT_CURL_VERBOSE=1
         gh repo create lineage_device_"$brand"_"$codename" --public --description="LineageOS compatible tree for $codename " --source=. --remote=origin --push
       continue-on-error: true
 
@@ -281,6 +290,9 @@ jobs:
         git branch -M twrp-"$version"-"$dat"
         git add . -f
         git commit -s -m "$codename : TWRP compatible device tree"
+        export GIT_TRACE_PACKET=1
+        export GIT_TRACE=1
+        export GIT_CURL_VERBOSE=1
         gh repo create twrp_device_"$brand"_"$codename" --public --description="TWRP compatible tree for $codename " --source=. --remote=origin --push
       continue-on-error: true
 
