--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -180,10 +180,12 @@ jobs:
         find ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
         dat=$(date +%Y%m%d)
         git init
-        git branch -M dump-"$codename"-"$dat"
-        git add . -f
-        git commit -s -m "Dump for $brand $codename"
-        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
+        git branch -M dump-"$codename"
+        git add . -A
+        git commit -asm "Dump for $brand $codename"
+        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin
+        git gc
+        git push "https://${UN}:${GITHUB_TOKEN}@github.com/${UN}/dump_${brand}_${codename}" dump-"$codename" -f
         cd ${GITHUB_WORKSPACE}/Auto-Dumper
         mkdir vnd_project
         mkdir vnd_project/dump
