--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -49,9 +49,6 @@ jobs:
     steps:
     - name: Check Out
       uses: actions/checkout@v4
-      
-    - name: Cleanup
-      uses: rokibhasansagar/slimhub_actions@main
         
     - name: Update Packages
       run: |
@@ -70,11 +67,9 @@ jobs:
         pip3 install aospdtgen
         pip3 install twrpdtgen
         pip3 install dumpyara
-        pip3 install uvx
         sudo pip3 install aospdtgen
         sudo pip3 install twrpdtgen
         sudo pip3 install dumpyara
-        sudo pip3 install uvx
 
     - name: Creating Dump
       run: |
@@ -182,10 +177,9 @@ jobs:
         dat=$(date +%Y%m%d)
         git init
         git branch -M dump-"$codename"
-        git add . -A
-        git commit -asm "Dump for $brand $codename"
-        git gc
-        git push "https://${UN}:${GITHUB_TOKEN}@github.com/${UN}/dump_${brand}_${codename}" dump-"$codename" -f
+        git add . -f
+        git commit -a -m "Dump for $brand $codename"
+        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
         cd ${GITHUB_WORKSPACE}/Auto-Dumper
         mkdir vnd_project
         mkdir vnd_project/dump
