--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -176,10 +176,12 @@ jobs:
         find ${GITHUB_WORKSPACE}/Auto-Dumper/DumprX/out -type f -size +50M -delete -exec echo "Deleted: "{} \;
         dat=$(date +%Y%m%d)
         git init
-        git branch -M dump-"$codename"
+        echo "# dump_dump-${codename}" >> README.md
         git add . -f
+        git branch -M dump-"$codename"
         git commit -a -m "Dump for $brand $codename"
-        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename " --source=. --remote=origin --push
+        gh repo create dump_"$brand"_"$codename" --public --description="Dump for $brand $codename "
+        git push -u origin dump-${codename}
         cd ${GITHUB_WORKSPACE}/Auto-Dumper
         mkdir vnd_project
         mkdir vnd_project/dump
