--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 
 jobs:
-  dump:
+  build_1:
     machine: true
 
     working_directory: ~/Auto-Firmware-Dumper
@@ -37,7 +37,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - dump:
+      - build_1:
           filters:
-            branches:
-              ignore: /.*/
+            tags:
+              only: /.*/
