--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,12 @@ jobs:
               sudo pip3 install aospdtgen
               sudo pip3 install twrpdtgen
               sudo pip3 install dumpyara
+      - run:
+          name: dump firmware
+          command: |
+              cd ${CIRCLE_WORKING_DIRECTORY}/Auto-Dumper/DumprX
+              export TERM=xterm
+              bash dumper.sh https://asia-sysupwsdl.vivoglobal.com/upgrade/official/officialFiles/PD1987F_EX_A_6.17.2-update-full_1662601037.zip
 
 workflows:
   version: 2
