--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,18 @@ jobs:
           command: sudo apt-get update
       - run:
           name: install package
-          command: sudo apt-get install git nano wget curl cpio aria2 python3 neofetch tar gzip gh python3-pip
+          command: sudo apt-get install git nano wget curl cpio aria2 python3 neofetch tar gzip python3-pip
+      - run:
+          name: installing github cli
+          command: |
+              (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
+              && sudo mkdir -p -m 755 /etc/apt/keyrings \
+              && out=$(mktemp) && wget -nv -O$out https://cli.github.com/packages/githubcli-archive-keyring.gpg \
+              && cat $out | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
+              && sudo chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
+              && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+              && sudo apt update \
+              && sudo apt install gh -y
       - run:
           name: setup dumprx
           command: |
