--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,36 +44,20 @@ jobs:
               sudo pip3 install twrpdtgen
               sudo pip3 install dumpyara
       - run:
+          name: Setting up Git
+          command: |
+              git config --global user.name ${UN}
+              git config --global user.email ${UEM}
+      - run:
           name: dump firmware
           command: |
               cd Auto-Dumper/DumprX
               export TERM=xterm
               echo "${GTOKEN}" >> .github_token
               echo "${GIT_ORG}" >> .github_orgname
+              echo "${TG_TOKEN}" >> .tg_token
+              echo "${CHAT_ID}" >> .tg_chat
               bash dumper.sh ${FUR}
-              chmod -R 777 out
-      - run:
-          name: Setting up Git
-          command: |
-              git config --global user.name ${UN}
-              git config --global user.email ${UEM}
-              git config --global http.postBuffer 524288000
-              gh auth login --with-token <<< ${GTOKEN}
-      - run:
-          name: Uploading Dump
-          command: bash sc/up
-      - run:
-          name: Create Vendor Tree
-          command: bash sc/upp
-      - run:
-          name: Uploading Vendor Tree
-          command: bash sc/uppp
-      - run:
-          name: Uploading LineageOS Device Tree
-          command: bash sc/upppu
-      - run:
-          name: Uploading TWRP Device Tree
-          command: bash sc/upppuu
 
 workflows:
   version: 2
