--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -57,18 +57,4 @@ jobs:
         sudo pip3 install dumpyara
 
     - name: DumprX
-      run: |
-        cd DumprX
-        export TERM=xterm
-        if [ ${{ github.event.inputs.UPLOAD_TO_GITHUB }} == true ]] then \
-            echo Firmware Dump Will Be Posted On Github \
-            echo "${ env.GTOKEN }" >> .github_token \
-            echo "${ env.GTO }" >> .github_orgname \
-        else \
-            echo "" \
-        fi
-        echo "${ env.TGT }" >> .tg_token
-        echo "${ env.CTI }" >> .tg_chat
-        git config --global user.name "${{ env.UN }}"
-        git config --global user.email "${{ env.UEM }}"
-        bash dumper.sh "${{ env.FUR }}"
+      run: bash dumprx.sh
