--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -44,9 +44,14 @@ jobs:
         mkdir -p Auto-Dumper && cd Auto-Dumper
         git clone https://github.com/DumprX/DumprX.git && cd DumprX
         bash setup.sh
-        echo "${SSH_KEY}" >> ~/.ssh/id_rsa
-        echo "${SSH_PUBKEY}" >> ~/.ssh/id_rsa.pub
-        echo "${KNOWN_HOSTS}" >> ~/.ssh/known_hosts
+
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: "${SSH_KEY}"
+        name: id_rsa
+        known_hosts: "${KNOWN_HOSTS}"
+        if_key_exists: replace 
 
     - name: Creating Dump
       run: |
