--- a/.github/workflows/rom_dumper.yml
+++ b/.github/workflows/rom_dumper.yml
@@ -46,12 +46,10 @@ jobs:
         bash setup.sh
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: tanmancan/action-setup-ssh-agent-key@1.0.0
       with:
-        key: "${SSH_KEY}"
-        name: id_rsa
-        known_hosts: "${KNOWN_HOSTS}"
-        if_key_exists: replace 
+        ssh-private-key: "${SSH_KEY}"
+        ssh-public-key: "${SSH_PUBKEY}"
 
     - name: Creating Dump
       run: |
